--- a/proiect-daw/Views/Bookmarks/Show.cshtml
+++ b/proiect-daw/Views/Bookmarks/Show.cshtml
@@ -12,7 +12,7 @@
                 @if (ViewBag.EsteAdmin)
                 {
                     <p class="text-muted">
-                        <i class="bi bi-person-circle"></i> Creat de: @Model.User.UserName
+                        <i class="bi bi-person-circle"></i> Creat de: @Model.User.FirstName @Model.User.LastName
                     </p>
                 }
 
