--- a/proiect-daw/Views/Comments/Edit.cshtml
+++ b/proiect-daw/Views/Comments/Edit.cshtml
@@ -16,7 +16,15 @@
 
     <br /><br />
 
-    <button class="btn btn-primary" type="submit">Editează comentariul</button>
+    <button class="btn btn-primary" type="submit">
+
+        <span class="transition"></span>
+        <span class="gradient"></span>
+        <span class="label">
+
+            Editează comentariul
+            
+        </span></button>
 
 </form>
 
