--- a/proiect-daw/Views/Posts/Edit.cshtml
+++ b/proiect-daw/Views/Posts/Edit.cshtml
@@ -47,7 +47,15 @@
                     <br />
                 </div>
 
-                <button class="btn btn-sm btn-success" type="submit">Modifica</button>
+                <button class="btn btn-sm btn-success" type="submit">
+                    <span class="transition"></span>
+                    <span class="gradient"></span>
+                    <span class="label">
+                        Modify</span>
+
+
+
+                </button>
 
             </form>
         </div>
