--- a/proiect-daw/Views/Posts/Index.cshtml
+++ b/proiect-daw/Views/Posts/Index.cshtml
@@ -19,7 +19,19 @@
     <div class="input-group mb-3">
         <input type="text" class="form-control" placeholder="@Localizer["Placeholder_Search"]" name="search"
                value="@ViewBag.SearchString">
-        <button class="btn btn-outline-success" type="submit">@Localizer["Button_Search"]</button>
+        <button  type="submit">
+
+            <span class="transition"></span>
+            <span class="gradient"></span>
+            <span class="label"> @Localizer["Button_Search"]
+            </span>
+        
+        </button>
+
+
+
+
+
     </div>
 </form>
 
