--- a/proiect-daw/Views/Users/Edit.cshtml
+++ b/proiect-daw/Views/Users/Edit.cshtml
@@ -55,7 +55,15 @@
         }
     </select>
 
-    <button type="submit" class="btn btn-sm btn-success">Editare user</button>
+    <button type="submit" class="btn btn-sm ">
+        <span class="transition"></span>
+        <span class="gradient"></span>
+        <span class="label">
+
+            Save changes
+            
+        </span>
+        </button>
 
 </form>
 
