--- a/proiect-daw/Areas/Identity/Pages/Account/Login.cshtml
+++ b/proiect-daw/Areas/Identity/Pages/Account/Login.cshtml
@@ -87,7 +87,16 @@
                     <span asp-validation-for="Input.Password" class="text-danger"></span>
                 </div>
                 <div>
-                    <button id="login-submit" type="submit" class="w-100 btn btn-lg btn-primary">Log in</button>
+                    <button id="login-submit" type="submit" class="w-100 btn btn-lg btn-primary">
+
+                        <span class="transition"></span>
+                        <span class="gradient"></span>
+                        <span class="label">
+
+                            Log in
+                            
+                        </span>
+                        </button>
                 </div>
                 <div class="footer-links">
                     <p>
