--- a/proiect-daw/Areas/Identity/Pages/Account/Register.cshtml
+++ b/proiect-daw/Areas/Identity/Pages/Account/Register.cshtml
@@ -4,13 +4,7 @@
     ViewData["Title"] = "Register";
 }
 
-<style>
-    .btn-primary {
-        background-color: #4CAF50;
-        border-color: #4CAF50;
-        font-size: 1.1rem;
-    }
-</style>
+
 <h1 class="text-center my-4">@ViewData["Title"]</h1>
 
 <div class="row justify-content-center">
@@ -55,7 +49,13 @@
                 <label asp-for="Input.ConfirmPassword">Confirm Password</label>
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
-            <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
+           
+            <button id="registerSubmit" type="submit" class="w-100 btn  btn-primary">
+                <span class="transition"></span>
+                <span class="gradient"></span>
+                <span class="label">
+                    Register</span>
+            </button>
         </form>
     </div>
 </div>
