--- a/proiect-daw/Views/Groups/EditComment.cshtml
+++ b/proiect-daw/Views/Groups/EditComment.cshtml
@@ -16,7 +16,11 @@
 
                 <div class="d-flex justify-content-between">
                     <button type="submit" class="btn btn-success btn-lg w-45">
-                        <i class="bi bi-save"></i> Save Changes
+                        <span class="transition"></span>
+                        <span class="gradient"></span>
+                        <span class="label">
+
+                            <i class="bi bi-save"></i> Save Changes</span>
                     </button>
                     <a asp-action="Show" asp-controller="Groups" asp-route-id="@Model.GroupId" class="btn btn-secondary btn-lg w-45">
                         <i class="bi bi-arrow-left"></i> Cancel
