--- a/proiect-daw/Views/Groups/New.cshtml
+++ b/proiect-daw/Views/Groups/New.cshtml
@@ -30,7 +30,12 @@
                         <!-- Submit Button -->
                         <div class="d-flex justify-content-end">
                             <button class="btn btn-primary px-4 py-2 font-montserrat" type="submit">
-                                <i class="bi bi-pencil-square"></i> Crează
+                                <span class="transition"></span>
+                                <span class="gradient"></span>
+                                <span class="label">
+
+                                    <i class="bi bi-pencil-square"></i> Create
+                                    </span>
                             </button>
                         </div>
                     </form>
