--- a/proiect-daw/Views/Shared/_LoginPartial.cshtml
+++ b/proiect-daw/Views/Shared/_LoginPartial.cshtml
@@ -11,25 +11,26 @@
 }
 
 <head>
+    <link href="~/css/antimation.css" rel="stylesheet" />
     <!-- Other head content -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.8.1/font/bootstrap-icons.min.css">
 </head>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container-fluid">
-        <a class="navbar-brand font-logo" href="@Url.Action("Index", "Home", new { area = "" })">Backbook</a>
+        <a class="navbar-brand font-logo hover-underline-animation" href="@Url.Action("Index", "Home", new { area = "" })">Backbook</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                    <a class="nav-link text-white d-flex align-items-center" asp-controller="Groups" asp-action="Index">
+                    <a class="nav-link text-white d-flex align-items-center hover-underline-animation" asp-controller="Groups" asp-action="Index">
                         <i class="bi bi-people-fill me-2"></i> Groups
                     </a>
                 </li>
 
                 <li class="nav-item dropdown">
-                    <a class="nav-link text-white d-flex align-items-center" title="Find" id="Find" role="button" asp-controller="Users" asp-action="Index">
+                    <a class="nav-link text-white d-flex align-items-center hover-underline-animation" title="Find" id="Find" role="button" asp-controller="Users" asp-action="Index">
                         Cautare
                     </a>
                 </li>
@@ -38,15 +39,14 @@
                 {
                     <li class="nav-item dropdown">
                         <form asp-controller="Groups" asp-action="PendingApproval" method="get" class="d-inline">
-                            <button type="submit" class="btn">
+                            <button type="submit" class="btn hover-underline-animation">
                                 <i class="bi bi-bell text-white"></i>
                             </button>
                         </form>
                     </li>
 
                     <li class="nav-item dropdown d-flex align-items-center">
-                        <!-- Profile Photo -->
-                        <a class="nav-link text-white d-flex align-items-center p-0"
+                        <a class="nav-link text-white d-flex align-items-center p-0 hover-underline-animation"
                            title="Manage"
                            id="userDropdown"
                            role="button"
@@ -56,10 +56,8 @@
                                  alt="Profile Picture"
                                  class="rounded-circle me-2"
                                  width="40" height="40">
-
                         </a>
 
-                        <!-- Name and Dropdown Toggle -->
                         <a class="nav-link dropdown-toggle text-white d-flex align-items-center p-0"
                            title="Manage"
                            id="userDropdown"
@@ -67,27 +65,25 @@
                            data-bs-toggle="dropdown"
                            aria-expanded="false">
                             <span class="me-1">@firstName @lastName</span>
-                            <i class="ms-2 bi bi-gear-fill"></i> <!-- Settings Icon -->
+                            <i class="ms-2 bi bi-gear-fill"></i>
                         </a>
 
-                        <!-- Dropdown Menu -->
                         <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userDropdown">
                             <li>
-                                <a class="dropdown-item" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage Account">Account Settings</a>
+                                <a class="dropdown-item hover-underline-animation text-black" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage Account">Account Settings</a>
                             </li>
                             <li>
                                 <form asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })" method="post" class="m-0 p-0">
-                                    <button type="submit" class="btn btn-link text-dark dropdown-item">Logout</button>
+                                    <button type="submit" class="btn btn-link text-dark dropdown-item hover-underline-animation">Logout</button>
                                 </form>
                             </li>
                         </ul>
                     </li>
-
                 }
                 else
                 {
                     <li class="nav-item">
-                        <a class="nav-link text-white" asp-area="Identity" asp-page="/Account/Login">Login</a>
+                        <a class="nav-link text-white hover-underline-animation" asp-area="Identity" asp-page="/Account/Login">Login</a>
                     </li>
                 }
             </ul>
@@ -95,19 +91,26 @@
     </div>
 </nav>
 
-
 <!--button add post in right corner-->
 @if (SignInManager.IsSignedIn(User))
 {
     <div class="btn-container">
         <form asp-controller="Posts" asp-action="New" method="get" class="d-inline">
             <button type="submit" class="btn btn-primary">
-                +
+                <span class="transition"></span>
+                <span class="gradient"></span>
+                <span class="label"> +</span>
+                
             </button>
+
         </form>
         <form asp-controller="Groups" asp-action="New" method="get" class="d-inline">
             <button type="submit" class="btn btn-primary">
-                <i class="bi bi-people-fill"></i> New group
+                <span class="transition"></span>
+                <span class="gradient"></span>
+                <span class="label"> 
+                    <i class="bi bi-people-fill"></i> New group
+                </span>
             </button>
         </form>
     </div>
