--- a/proiect-daw/Views/Shared/_LoginPartial.cshtml
+++ b/proiect-daw/Views/Shared/_LoginPartial.cshtml
@@ -31,7 +31,7 @@
 
                 <li class="nav-item dropdown">
                     <a class="nav-link text-white d-flex align-items-center hover-underline-animation" title="Find" id="Find" role="button" asp-controller="Users" asp-action="Index">
-                        Cautare
+                        Search Users
                     </a>
                 </li>
 
