--- a/proiect-daw/wwwroot/css/antimation.css
+++ b/proiect-daw/wwwroot/css/antimation.css
@@ -230,3 +230,76 @@ button:active {
 .nav-link:hover {
     color: #0b93c8 !important;
 }
+
+
+
+.toggle-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    border-radius: 50px;
+    padding: 10px;
+    font-size: 1em;
+}
+
+.toggle-checkbox {
+    appearance: none;
+    position: absolute;
+    z-index: 1;
+    border-radius: inherit;
+    width: 100%;
+    height: 100%;
+    font: inherit;
+    opacity: 0;
+    cursor: pointer;
+}
+
+.toggle-container {
+    display: flex;
+    align-items: center;
+    position: relative;
+    border-radius: 50px;
+    width: 60px;
+    height: 30px;
+    background-color: #e8e8e8;
+    box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.2), inset 0 2px 4px rgba(0, 0, 0, 0.1);
+    transition: background-color 0.4s linear;
+}
+
+.toggle-checkbox:checked + .toggle-container {
+    background-color: #0b93c8
+}
+
+.toggle-button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    left: 2px;
+    border-radius: 50%;
+    width: 27px;
+    height: 27px;
+    background-color: #e8e8e8;
+    box-shadow: inset 0 -2px 2px rgba(0, 0, 0, 0.1), inset 0 -4px 2px rgba(0, 0, 0, 0.2), inset 0 6px 2px rgba(255, 255, 255, 0.3), 0 4px 4px rgba(0, 0, 0, 0.5);
+    transition: left 0.4s;
+}
+
+.toggle-checkbox:checked + .toggle-container > .toggle-button {
+    left: 30px;
+}
+
+.toggle-button-circles-container {
+    display: grid;
+    grid-template-columns: repeat(3, 4px);
+    gap: 2px;
+    position: absolute;
+    margin: 0 auto;
+}
+
+.toggle-button-circle {
+    border-radius: 50%;
+    width: 2px;
+    height: 2px;
+    background-image: radial-gradient(circle at 50% 0, #f5f5f5, #c4c4c4);
+}
