--- a/proiect-daw/Views/Posts/Show.cshtml
+++ b/proiect-daw/Views/Posts/Show.cshtml
@@ -62,7 +62,7 @@
                     </div>
 
                     <!-- Edit/Delete Actions -->
-                    @if ((ViewBag.AfisareButoane == true && Model.UserId == ViewBag.UserCurent)
+                    @if ( (Model.UserId == ViewBag.UserCurent)
                     || ViewBag.EsteAdmin == true)
                     {
                         <div class="d-flex">
