--- a/proiect-daw/Views/Users/Show.cshtml
+++ b/proiect-daw/Views/Users/Show.cshtml
@@ -15,6 +15,7 @@
                 }
                 else
                 {
+                    <p class="text-muted">@Model.ProfileDescription</p>
                     <p>Email: <strong>@Model.Email</strong></p>
                     <p>Phone: <strong>@Model.PhoneNumber</strong></p>
 
