--- a/proiect-daw/Views/Users/Index.cshtml
+++ b/proiect-daw/Views/Users/Index.cshtml
@@ -69,7 +69,9 @@
         <div class="input-group mb-3">
             <input type="text" class="form-control" placeholder="Search user" name="search"
                    value="@ViewBag.SearchString">
-            <button type="submit" class="btn btn-primary">
+            <button type="submit" class="">
+                <span class="transition"></span>
+                <span class="gradient"></span>
                 <span class="label">Search</span>
             </button>
         </div>
