add follows request

--- a/proiect-daw/Views/Shared/_LoginPartial.cshtml
+++ b/proiect-daw/Views/Shared/_LoginPartial.cshtml
@@ -44,6 +44,13 @@
                             </button>
                         </form>
                     </li>
+                    <li class="nav-item dropdown">
+                        <form asp-controller="Users" asp-action="PendingFollows" method="get" class="d-inline">
+                            <button type="submit" class="btn hover-underline-animation">
+                                <i class="bi bi-person-plus text-white"></i>
+                            </button>
+                        </form>
+                    </li>
 
                     <li class="nav-item dropdown d-flex align-items-center">
                         <a class="nav-link text-white d-flex align-items-center p-0 hover-underline-animation"
